# microbenchmark

./: .Rbuildignore  .dict.rds  .gitignore  .travis.yml  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  cleanup  configure  configure.ac  do
.github/: CONTRIBUTING.md  FUNDING.yml
R/: autoplot.R  boxplot.R  internal.R  microbenchmark.R  microtiming_precision.R  nanotime.R  print.R  rbind.R  summary.R  zzz.R
examples/: 1plus1.R  callnextmethod.R  check.R  dispatchspeed.R  funcall.R  multcomp.R  native.R  native.c  null.R  order_expr.R  output.R  overhead.R  relative.R  scaling.R  seq.R  simple_lm.R  stringdispatch.R  system_time.R  types.R  units.R  weird_expr.R
inst/tests/: test_regression.R
inst/unitTests/: runit_test_regression.R
man/: autoplot.microbenchmark.Rd  boxplot.microbenchmark.Rd  coalesce.Rd  convert_to_unit.Rd  determine_unit.Rd  find_prefix.Rd  get_nanotime.Rd  microbenchmark.Rd  microtiming_precision.Rd  normalize_unit.Rd  print.microbenchmark.Rd  summary.microbenchmark.Rd
skel/: DESCRIPTION  LICENSE
skel/R/: boxplot.R  internal.R  microbenchmark.R  nanotime.R  print.R  summary.R
skel/inst/tests/: #test_regression.R#  .#test_regression.R  test_regression.R
skel/src/: Makevars  nanotimer.c  nanotimer_gettime.h  nanotimer_linux.h  nanotimer_macosx.h  nanotimer_rtposix.h  nanotimer_windows.h  sexp_macros.h
src/: Makevars  Makevars.in  config.h.in  do_nothing.c  do_nothing.h  init.c  nanotimer.c  nanotimer_gettime.h  nanotimer_gettimeofday.h  nanotimer_macosx.h  nanotimer_rtposix.h  nanotimer_windows.h
tests/: doRUnit.R  runtests.R
tools/: roxygenize  run-tests  set-version
